// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 gmqqPG"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dBCJFZ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 fWAByJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 gDVvgk"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 iblwdZ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
    data-testid="Button"
    disabled=""
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      Click
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render loading with icon 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 fWAByJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="flex relative items-center"
      >
        <span
          class="flex invisible items-center space-x-2"
        >
          <div
            class="sc-bdfBwQ fzssDJ"
            height="2"
            width="2"
          />
        </span>
        <div
          class="absolute top-0 right-0 bottom-0 left-0"
        >
          <div
            class="Spinner-sc-1tybciv-0 jaZOXR m-auto"
            color="info"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button should render with icon and custom icon width and height 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="sc-bdfBwQ iyevwF"
        height="20"
        width="20"
      >
        <svg>
          plus.svg
        </svg>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button should render with icon on the left side 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="sc-bdfBwQ bfBhNR"
        height="14"
        width="14"
      >
        <svg>
          plus.svg
        </svg>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button should render with icon on the right side 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      Click Me
      <div
        class="sc-bdfBwQ bfBhNR"
        height="14"
        width="14"
      >
        <svg>
          plus.svg
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button should render with loading state enabled 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="flex relative items-center"
      >
        <span
          class="flex invisible items-center space-x-2"
        >
          Click Me
        </span>
        <div
          class="absolute top-0 right-0 bottom-0 left-0"
        >
          <div
            class="Spinner-sc-1tybciv-0 jaZOXR m-auto"
            color="info"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;
